[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/flappy-bird-assets-master/sprites/pipe-green.png" type="Texture" id=1]
[ext_resource path="res://scenes/lvl_4_colisiones/pipe_4.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 160 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 336 )

[node name="pipe" type="Node2D" groups=["pipe"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="BottomPipe" type="Area2D" parent="."]
position = Vector2( 0, 232 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BottomPipe"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
shape = SubResource( 1 )

[node name="TopPipe" type="Area2D" parent="."]
position = Vector2( 0, -240 )
rotation = 3.14159
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="TopPipe"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
shape = SubResource( 1 )

[node name="CheckPointArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPointArea"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="BottomPipe" to="." method="_on_BottomPipe_body_entered"]
[connection signal="body_entered" from="TopPipe" to="." method="_on_TopPipe_body_entered"]
[connection signal="body_entered" from="CheckPointArea" to="." method="_on_CheckPointArea_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
